# atlas

./: Makefile  PAPER_UPGRADE_NOTES.md  README.md  pyproject.toml  requirements.txt  run.sh  run_multi.sh  run_paper_pipeline.sh
atlas_one_step/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
atlas_one_step/configs/: defaults.yaml
atlas_one_step/configs/atlas/: build_atlas.yaml  fit_surrogate.yaml  sweep_line.yaml  sweep_schedule.yaml  sweep_simplex.yaml
atlas_one_step/configs/corruption/: diffusion_like.yaml  flow_like.yaml  meanflow_like.yaml
atlas_one_step/configs/dataset/: cifar10.yaml  imagenet64.yaml  lsun_bedroom256.yaml  lsun_cat256.yaml  pdebench_darcy.yaml  ucf101.yaml
atlas_one_step/configs/eval/: pilot.yaml  resolution_scaling.yaml  tail.yaml
atlas_one_step/configs/model/: unet_base.yaml  unet_large.yaml  unet_small.yaml  video_unet_small.yaml
atlas_one_step/configs/probe/: conditioning.yaml  normal_burden.yaml  pathology_score.yaml  support_deviation.yaml
atlas_one_step/configs/selection/: semantic_gap.yaml  surrogate_guided.yaml
atlas_one_step/configs/train/: ablation.yaml  cheap_probe.yaml  coupled.yaml  decoupled.yaml  full_train.yaml
atlas_one_step/scripts/: setup_env.sh
atlas_one_step/scripts/ablations/: ablate_losses.sh  ablate_phi_capacity.sh  ablate_schedule.sh  ablate_selection.sh  ablate_stability.sh
atlas_one_step/scripts/atlas/: build_cifar_atlas.sh  fit_cifar_surrogate.sh  run_cifar_line_sweep.sh  run_cifar_schedule_sweep.sh  run_cifar_simplex_sweep.sh  run_lsun64_reduced_sweep.sh
(+170 files in other folders)
