
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-one-step"
version = "0.1.0"
description = "ATLAS one-step generation research codebase"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "torchvision",
  "hydra-core",
  "omegaconf",
  "numpy",
  "pandas",
  "pyarrow",
  "matplotlib",
  "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
